- Corrigido bug no z-index do modal

--- a/client/src/app/components/modal/modal.component.scss
+++ b/client/src/app/components/modal/modal.component.scss
@@ -22,6 +22,7 @@
   }
 
   #modal-header {
+    z-index: 1;
     display: flex;
     height: 35px;
     box-shadow: 1px 0 6px $gray-70;
@@ -40,8 +41,8 @@
     }
 
     #modal-title {
-      font-weight: 500;
-      font-size: 24px;
+      font-weight: 200 !important;
+      font-size: 22px;
       margin: 0 auto;
     }
 
@@ -51,14 +52,16 @@
   }
 
   #modal-body {
+    z-index: 0;
     position: relative;
     min-height: 150px;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 10px;
     flex: 1;
   }
 
   #modal-footer {
+    z-index: 1;
     display: flex;
     justify-content: flex-end;
     align-items: center;
