--- a/client/src/app/diagnostico/list/diagnostico-list.component.scss
+++ b/client/src/app/diagnostico/list/diagnostico-list.component.scss
@@ -39,12 +39,21 @@ diagnostico-status {
   }
 }
 
+.button-add {
+  height: 30px;
+  width: 30px;
+
+  .icon {
+    font-size: 20px;
+  }
+}
+
 
 @media only screen and (max-width: $tablet-width) {
   .container-diagnostic {
     .row-diagnostic {
       .item-description-diagnostic {
-          width: 100%;
+        width: 100%;
       }
     }
   }
